--- a/html/home.html
+++ b/html/home.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo Linguagem de Programação</title>
+    <link rel="stylesheet" href="/css/home.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <nav>
         <div class="left">
             <div class="logo">
-                <img src="">
+                <img src="/img/logo.ico">
             </div>
             <div class="links">
                 <a href="">Home</a>
@@ -22,9 +23,9 @@
             </div>
         </div>
         <div class="buttons">
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href=""><i class='bx bx-support'></i></a>
+            <a href=""><i class='bx bxs-basket'></i></a>
+            <a href=""><i class='bx bx-user-circle'></i></a>
         </div>
     </nav>
 </body>
