--- a/html/home.html
+++ b/html/home.html
@@ -28,5 +28,19 @@
             <a href=""><i class='bx bx-user-circle'></i></a>
         </div>
     </nav>
+    <header>
+        <div class="info">
+            <h1>Aprendendo Linguagens de Programação!</h1>
+            <p>Cursos com promoções exclusivas</p>
+        </div>
+        <div class="buttons">
+            <button class="see-all">Cursos</button>
+            <button>O que deseja ver?</button>
+        </div>
+        <div class="pesquisar">
+            <input type="text" placeholder="Pesquise o que deseja:">
+            <button><i class='bx bxs-search-alt-2'></i></button>
+        </div>
+    </header>
 </body>
 </html>
