--- a/html/home.html
+++ b/html/home.html
@@ -42,5 +42,33 @@
             <button><i class='bx bxs-search-alt-2'></i></button>
         </div>
     </header>
+
+    <div class="content">
+        <div class="separador">
+            <h2>Cursos Populares</h2>
+            <a href="">Ver Todos! <i class='bx bx-right-arrow' ></i></a>
+        </div>
+    </div>
+
+    <div class="cursos">
+        <div class="item">
+            <div class="top">
+                <img src="" alt="">
+                <div class="info">
+                    <a href="">Aprenda React com um Mini Curso</a>
+                    <p>Mentor: Label Forget</p>
+                    <p>Carga horária: 80h</p>
+                    <p>Lifetime Support</p>
+                </div>
+            </div>
+            <div class="buttom">
+                <div class="price">
+                    <h5>Preço: 40$</h5>
+                    <p>Preço Antigo: 100$</p>
+                </div>
+                <h5 class="tag"><span>+400</span>Estudantes</h5>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
