--- a/html/home.html
+++ b/html/home.html
@@ -69,6 +69,29 @@
                 <h5 class="tag"><span>+400</span>Estudantes</h5>
             </div>
         </div>
-    </div>
+        <div class="item">
+            <div class="top">
+                <img src="assests/course-2.jpg">
+                <div class="info">
+                    <a href="#">Complete Bootstrap Course</a>
+                    <p>Author : Reza Mehdikhanlou</p>
+                    <p>Duration : +13h</p>
+                    <p>Lifetime Support</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="price">
+                    <h5>Price : 40$</h5>
+                    <p>Old Price : 120$</p>
+                </div>
+                <div class="discount">
+                    <div class="time">
+                        <p>Until</p>
+                        <h5>3 days</h5>
+                    </div>
+                    <h5><span>20%</span> Discount</h5>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
