--- a/html/home.html
+++ b/html/home.html
@@ -135,5 +135,49 @@
                 </div>
             </div>
         </div>
+        <div class="item">
+            <div class="top">
+                <img src="assests/course-5.jpg">
+                <div class="info">
+                    <a href="#">Learn PHP With Mini Projects</a>
+                    <p>Author : Reza Mehdikhanlou</p>
+                    <p>Duration : +13h</p>
+                    <p>Lifetime Support</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="price">
+                    <h5>Price : 40$</h5>
+                    <p>Old Price : 120$</p>
+                </div>
+                <h5 class="tag"><span>+400</span> Students</h5>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <img src="assests/course-6.jpg">
+                <div class="info">
+                    <a href="#">Coding Api With NodeJS</a>
+                    <p>Author : Reza Mehdikhanlou</p>
+                    <p>Duration : +13h</p>
+                    <p>Lifetime Support</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="price">
+                    <h5>Price : 40$</h5>
+                    <p>Old Price : 120$</p>
+                </div>
+                <div class="discount">
+                    <div class="time">
+                        <p>Until</p>
+                        <h5>3 days</h5>
+                    </div>
+                    <h5><span>20%</span> Discount</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
