--- a/html/home.html
+++ b/html/home.html
@@ -178,6 +178,40 @@
             </div>
         </div>
     </div>
+    <div class="separator">
+        <h2>Students Comments</h2>
+    </div>
 
+    <div class="comments">
+        <p>These are our students comments. This will help you choose courses better. Also you can contact us for
+            more info!</p>
+        <div class="right">
+            <div class="item">
+                <img src="assests/profile-3.png">
+                <p>That was best course for me.</p>
+            </div>
+            <div class="item">
+                <img src="assests/profile-2.png">
+                <p>This courses helped me a lot!</p>
+            </div>
+            <div class="item">
+                <img src="assests/profile-1.png">
+                <p>That was best course for me.</p>
+            </div>
+            <div class="item">
+                <img src="assests/profile-1.png">
+                <p>This courses helped me a lot!</p>
+            </div>
+            <div class="item">
+                <img src="assests/profile-2.png">
+                <p>That was best course for me.</p>
+            </div>
+            <div class="item">
+                <img src="assests/profile-3.png">
+                <p>This courses helped me a lot!</p>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
