--- a/html/home.html
+++ b/html/home.html
@@ -181,7 +181,6 @@
     <div class="separator">
         <h2>Students Comments</h2>
     </div>
-
     <div class="comments">
         <p>These are our students comments. This will help you choose courses better. Also you can contact us for
             more info!</p>
@@ -210,7 +209,64 @@
                 <img src="assests/profile-3.png">
                 <p>This courses helped me a lot!</p>
             </div>
+        </div>
+    </div>
+    <div class="separator">
+        <h2>Weekly Podcasts</h2>
+        <a href="#">See all <i class='bx bx-chevron-right'></i></a>
+    </div>
 
+    <div class="podcasts">
+        <div class="item">
+            <div class="top">
+                <i class='bx bx-headphone'></i>
+                <div class="info">
+                    <a href="#">Learn Coding</a>
+                    <p>10 Aug 2024</p>
+                    <p>Listened 100 Times</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="duration">
+                    <i class='bx bx-play-circle'></i>
+                    <p>01:02:10</p>
+                </div>
+                <h5 class="tag"><span>+210</span> Listeners</h5>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <i class='bx bx-headphone'></i>
+                <div class="info">
+                    <a href="#">Learn Coding</a>
+                    <p>10 Aug 2024</p>
+                    <p>Listened 100 Times</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="duration">
+                    <i class='bx bx-play-circle'></i>
+                    <p>01:02:10</p>
+                </div>
+                <h5 class="tag"><span>+210</span> Listeners</h5>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <i class='bx bx-headphone'></i>
+                <div class="info">
+                    <a href="#">Learn Coding</a>
+                    <p>10 Aug 2024</p>
+                    <p>Listened 100 Times</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="duration">
+                    <i class='bx bx-play-circle'></i>
+                    <p>01:02:10</p>
+                </div>
+                <h5 class="tag"><span>+210</span> Listeners</h5>
+            </div>
         </div>
     </div>
 </body>
