--- a/html/home.html
+++ b/html/home.html
@@ -269,5 +269,54 @@
             </div>
         </div>
     </div>
+    <div class="separator">
+        <h2>Blog Articles</h2>
+        <a href="#">See all <i class='bx bx-chevron-right'></i></a>
+    </div>
+
+    <div class="articles">
+        <div class="item">
+            <div class="top">
+                <img src="assests/art-1.jpg">
+                <h5>What is unique brand?</h5>
+            </div>
+            <div class="bottom">
+                <h5><span>+420</span> Views</h5>
+                <a href="#">Read More <i class='bx bx-chevron-right'></i></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <img src="assests/art-2.jpg">
+                <h5>What is unique brand?</h5>
+            </div>
+            <div class="bottom">
+                <h5><span>+420</span> Views</h5>
+                <a href="#">Read More <i class='bx bx-chevron-right'></i></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <img src="assests/art-3.jpg">
+                <h5>What is unique brand?</h5>
+            </div>
+            <div class="bottom">
+                <h5><span>+420</span> Views</h5>
+                <a href="#">Read More <i class='bx bx-chevron-right'></i></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <img src="assests/art-4.jpg">
+                <h5>What is unique brand?</h5>
+            </div>
+            <div class="bottom">
+                <h5><span>+420</span> Views</h5>
+                <a href="#">Read More <i class='bx bx-chevron-right'></i></a>
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
