--- a/html/home.html
+++ b/html/home.html
@@ -316,7 +316,41 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <div class="columns">
+            <div class="col">
+                <h5>Site Links</h5>
+                <a href="#">Articles</a>
+                <a href="#">Podcasts</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="col">
+                <h5>Other Pages</h5>
+                <a href="#">404 Page</a>
+                <a href="#">Login|Register</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+            <div class="col">
+                <h5>Collaboration</h5>
+                <a href="#">Work With Us</a>
+                <a href="#">Affiliate</a>
+                <a href="#">Support</a>
+            </div>
+            <div class="col last">
+                <h5>About Us</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab ad incidunt deleniti eligendi, vel
+                    quaerat a
+                    doloremque, quo id maiores suscipit ex iste accusantium.</p>
+                <div class="social-links">
+                    <i class='bx bxl-instagram'></i>
+                    <i class='bx bxl-dribbble'></i>
+                    <i class='bx bxl-linkedin'></i>
+                    <i class='bx bxl-twitter'></i>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
