versão quase final

--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo Linguagem de Programação</title>
     <link rel="stylesheet" href="/css/home.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <nav>
@@ -14,32 +13,33 @@
                 <img src="/img/logo.ico">
             </div>
             <div class="links">
-                <a href="">Home</a>
-                <a href="">Cursos</a>
-                <a href="">Artigos</a>
-                <a href="">Podcast</a>
-                <a href="">Saiba mais</a>
-                <a href="">Contato</a>
+                <a href="#">Home</a>
+                <a href="#">Courses</a>
+                <a href="#">Articles</a>
+                <a href="#">Podcasts</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
             </div>
         </div>
         <div class="buttons">
-            <a href=""><i class='bx bx-support'></i></a>
-            <a href=""><i class='bx bxs-basket'></i></a>
-            <a href=""><i class='bx bx-user-circle'></i></a>
+            <a href="#"><i class='bx bx-support'></i></a>
+            <a href="#"><i class='bx bx-basket'></i></a>
+            <a href="#"><i class='bx bx-user'></i></a>
         </div>
+
     </nav>
     <header>
         <div class="info">
-            <h1>Aprendendo Linguagens de Programação!</h1>
-            <p>Cursos com promoções exclusivas</p>
+            <h1>Learn Coding Easier</h1>
+            <p>Learn Programming With Coach And Mentor!</p>
         </div>
         <div class="buttons">
-            <button class="see-all">Cursos</button>
-            <button>O que deseja ver?</button>
+            <button class="see-all">See Courses</button>
+            <button>What Is Coding?</button>
         </div>
-        <div class="pesquisar">
-            <input type="text" placeholder="Pesquise o que deseja:">
-            <button><i class='bx bxs-search-alt-2'></i></button>
+        <div class="search">
+            <input type="text" placeholder="Search what you want...">
+            <button><i class='bx bx-search'></i></button>
         </div>
     </header>
 
@@ -50,28 +50,28 @@
         </div>
     </div>
 
-    <div class="cursos">
-        <div class="item">
-            <div class="top">
-                <img src="" alt="">
-                <div class="info">
-                    <a href="">Aprenda React com um Mini Curso</a>
-                    <p>Mentor: Label Forget</p>
-                    <p>Carga horária: 80h</p>
-                    <p>Lifetime Support</p>
+     <div class="courses">
+            <div class="item">
+                <div class="top">
+                    <img src="/img/course-1.jpg">
+                    <div class="info">
+                        <a href="#">Learn React With Mini Projects</a>
+                        <p>Author : Reza Mehdikhanlou</p>
+                        <p>Duration : +13h</p>
+                        <p>Lifetime Support</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="price">
+                        <h5>Price : 40$</h5>
+                        <p>Old Price : 120$</p>
+                    </div>
+                    <h5 class="tag"><span>+400</span> Students</h5>
                 </div>
             </div>
-            <div class="buttom">
-                <div class="price">
-                    <h5>Preço: 40$</h5>
-                    <p>Preço Antigo: 100$</p>
-                </div>
-                <h5 class="tag"><span>+400</span>Estudantes</h5>
-            </div>
-        </div>
         <div class="item">
             <div class="top">
-                <img src="assests/course-2.jpg">
+                <img src="/img/course-2.jpg">
                 <div class="info">
                     <a href="#">Complete Bootstrap Course</a>
                     <p>Author : Reza Mehdikhanlou</p>
